# ca_model

./: CMakeLists.txt  Cycle Accurate Model.docx  README.md
designs/ca_fifo/: ca_fifo_ctrl.h  ca_fifo_mem.h  ca_fifo_top.h
libs/: ca_module.h  common.cpp  common.h
src/: ca_fifo_ctrl.h  ca_fifo_mem.h  ca_fifo_top.h
tests/: driver_monitor.h  main.cpp
tests/ca_fifo/: driver_monitor.h  main.cpp
utils/: ca_module.h  common.cpp  common.h
